<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yuanbao.tutu.chatrobot.VideoConfigActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/configScroll"
        android:layout_alignParentEnd="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout"
            android:gravity="center_vertical"
            >

            <CheckBox
                android:id="@+id/enableP2Pbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_P2P_Box" />

            <CheckBox
                android:id="@+id/enable_overLay_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_overloy_Box" />

            <CheckBox
                android:id="@+id/enable_video_rotate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_video_rotate_box"
                android:textColor="@color/abc_search_url_text_pressed" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_video_auto_rotate"
                android:id="@+id/videoAutoRotation" />

            <CheckBox
                android:id="@+id/enable_GPU_render"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_GPU_render_box" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_use_armv6_box"
                android:id="@+id/enable_use_armV6" />

            <CheckBox
                android:id="@+id/enable_fix_color_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_fix_color_deviation_box" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_use_AEC_box"
                android:id="@+id/enable_use_AEC" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_use_Hard_ware_codec_box"
                android:id="@+id/enable_use_hardware_code" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/configMode"
                    android:id="@+id/configMode" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/server_config"
                    android:id="@+id/serverConfig" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_config"
                    android:id="@+id/customerConfig" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Select_resolution"
                android:id="@+id/videoResolutionTextView" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/videoResolution" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Select_video_bitrate"
                android:id="@+id/videoBitrateView" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/videoBitrate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Select_video_FPS"
                android:id="@+id/videoFPSview" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/videoFPS" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Select_video_Quality"
                android:id="@+id/videoQualityview" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/videoQuality" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Select_video_pre_prameter"
                android:id="@+id/video_Pre_prameter" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/videoprepremeter" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/voidtextconfig1"
                    android:layout_weight="7"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save_video_config"
                    android:id="@+id/saveBtn"
                    android:layout_weight="3" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
