<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yuanbao.tutu.chatrobot.MainActivity">

    <LinearLayout
        android:id="@+id/MainUI"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:weightSum="1"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/titleUI"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/title_name"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:text="@string/title_name"
            android:layout_weight="0.1" />

        <LinearLayout
            android:id="@+id/cfgUI"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0.1">

            <TextView
                android:id="@+id/voidcfg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <Button
                android:id="@+id/video_cfg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/video_config"
                tools:text="@string/video_config"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ipUI"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0.08">

            <TextView
                android:id="@+id/serverIP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/serverIP"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:text="@string/serverIP"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/serverIPEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/IPEdit_text"
                tools:ignore="LabelFor"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/PortUI"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0.08">

            <TextView
                android:id="@+id/serverPort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/serverPort"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/serverPortEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/portEdit_text"
                tools:text="@string/portEdit_text"
                tools:ignore="LabelFor"
                android:layout_gravity="start"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/RoomIDUI"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0.08">

            <TextView
                android:id="@+id/RoomID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/roomID"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:text="@string/roomID"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/RoomIDedit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/roomID_EditText"
                tools:ignore="LabelFor"
                android:layout_weight="2"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nameUI"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0.08">

            <TextView
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/UserName"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:text="@string/UserName"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/UsernameEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/userNameEdit"
                tools:text="@string/userNameEdit"
                tools:ignore="LabelFor"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pwUI"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0.08">

            <TextView
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/Password"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:text="@string/Password" />

            <EditText
                android:id="@+id/passWordEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:inputType=""
                tools:text="@string/passWordEdit"
                tools:ignore="LabelFor,TextFields"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/netUI"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0.1">

            <TextView
                android:id="@+id/void1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <Button
                android:id="@+id/loginbut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/loginBut"
                tools:text="@string/loginBut"
                android:layout_weight="3"/>

            <Button
                android:id="@+id/logoutbut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/logoutBut"
                tools:text="@string/logoutBut"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/void2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/voidlayout1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:textAlignment="gravity"
            android:layout_gravity="center"
            android:layout_weight="0.1"></LinearLayout>

        <TextView
            android:id="@+id/conMsg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/buildMsg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:textAlignment="center" />

    </LinearLayout>


</RelativeLayout>
