<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yuanbao.tutu.chatrobot.VideoChatActivity">
    <LinearLayout
        android:id="@+id/videoMainUI"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        tools:ignore="MissingConstraints"
        android:gravity="bottom">

        <SurfaceView
            android:id="@+id/remoteVideo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75" />

        <LinearLayout
            android:id="@+id/controlUI"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:id="@+id/MsUI">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/msgSteteUI">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/StateText"
                        android:layout_weight="8"
                        android:textSize="12sp"
                        android:textIsSelectable="false"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/MsgTransUI">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/transMitTextEdit"
                        android:layout_weight="8"
                        android:contentDescription="@string/transmitMsgDes"
                        android:editable="true"
                        android:inputType="text"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/ctlUI">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/sendMsgBut"
                        android:id="@+id/transmitBut"
                        android:layout_weight="1"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/RobotState"
                        android:id="@+id/robotStateBut"
                        android:layout_weight="1"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/end_CallBut"
                        android:id="@+id/closeVideoBut"
                        android:layout_weight="1"/>

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/openvideoBut"
                        android:layout_weight="1"
                        android:background="@android:drawable/presence_video_online"
                        android:contentDescription="@string/video_showBut"
                        android:longClickable="false"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:id="@+id/CtlUI"
                android:baselineAligned="false">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/rightUI">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/rightview1"
                        android:layout_weight="0.3" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/rightBut"
                        android:layout_weight="0.3" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/rightview2"
                        android:layout_weight="0.3" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/centraUI">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/upBut"
                        android:layout_weight="0.3" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/centralview"
                        android:layout_weight="0.3" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/downBut"
                        android:layout_weight="0.3" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/leftUI">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/leftview1"
                        android:layout_weight="0.3" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/leftBut"
                        android:layout_weight="0.3" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/leftview2"
                        android:layout_weight="0.3" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
